# piledmatrix

./: .gitignore  CMakeLists.txt  README.md
cmake/: gtest.cmake  jsoncpp.cmake  pybind11.cmake  spdlog.cmake  wiringPi.cmake
docker/: Dockerfile  pi.cmake
docker/python3.5/arm-linux-gnueabihf/python3.5m/: pyconfig.h
python/: CMakeLists.txt  postinst  prerm  setup.py.in
python/piledmatrix/: __init__.py  piledmatrix
scripts/: build-docker.sh  build.sh  install.sh  run.sh  test.sh
src/: AbstractGraphicsAnimation.h  Font8x5.cpp  Font8x5.h  GraphicsFactory.cpp  GraphicsFactory.h  GraphicsToolBox.cpp  GraphicsToolBox.h  HorizontalGraphicsAnimation.cpp  HorizontalGraphicsAnimation.h  IFont.h  IGraphics.h  IGraphicsAnimation.h  IGraphicsProvider.h  IMatrixDrawable.h  MonoColor8RowsGraphics.cpp  MonoColor8RowsGraphics.h  MonoColor8RowsGraphicsFactory.cpp  MonoColor8RowsGraphicsFactory.h  PiLedMatrix.cpp  PiLedMatrix.h  PyPiLedMatrix.cpp  Runtime.cpp  Runtime.h  SimpleMessageGraphicsProvider.cpp  SimpleMessageGraphicsProvider.h  Sure3208LedMatrix.cpp  Sure3208LedMatrix.h  TimeGraphicsProvider.cpp  TimeGraphicsProvider.h  main.cpp  piledmatrix.service
tests/: Font8x5Tests.cpp  GraphicsToolBoxTests.cpp  HorizontalGraphicsAnimationTests.cpp  MonoColor8RowsGraphicsFactoryTests.cpp  MonoColor8RowsGraphicsTests.cpp  PiLedMatrixTests.cpp  RuntimeTests.cpp  SimpleMessageGraphicsProviderTests.cpp  TimeGraphicsProviderTests.cpp  main.cpp
tests/mocks/: MockGraphicsFactory.h  MockIFont.h  MockIGraphics.h  MockIGraphicsProvider.h  MockIMatrixDrawable.h
